fix: config.py access from installed package via importlib.resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,11 @@ install_requires =
     spacy-transformers
     torch
     tqdm
+include_package_data = True
 [options.extras_require]
 test =
     pytest
     coverage
 [options.package_data]
 package_config =
-    package_config.yaml
+    *.yaml
