--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,19 @@
+[tool.poetry]
+name = "herference"
+version = "0.1.0"
+description = "Coreference Resolution inference"
+authors = ["Karol Saputa <karol.saputa@gmail.com>"]
+readme = "README.md"
+packages = [{include = "herference"}]
+
+[tool.poetry.dependencies]
+python = ">=3.10,<3.12"
+torch = ">=2.0.0, !=2.0.1, !=2.1.0"
+transformers = "^4.35.0"
+spacy-alignments = "^0.9.1"
+spacy-transformers = "^1.3.3"
+
+
 [build-system]
 requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
 build-backend = "setuptools.build_meta"
