--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ torch = ">=2.0.0, !=2.0.1, !=2.1.0"
 transformers = "^4.35.0"
 spacy-alignments = "^0.9.1"
 spacy-transformers = "^1.3.3"
+sacremoses = "^0.1.1"
 
 
 [build-system]
