--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ spacy = "^3.7.2"
 
 
 [build-system]
-requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel"]   # PEP 508 specifications.
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.build]
 include = ["package_config.yaml"]
