--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Coreference Resolution inference"
 authors = ["Karol Saputa <karol.saputa@gmail.com>"]
 readme = "README.md"
 packages = [{include = "herference"}]
+include = ["pyproject.toml", "README.md", "LICENSE", "package_config.yaml"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
@@ -20,6 +21,3 @@ spacy = "^3.7.2"
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel"]   # PEP 508 specifications.
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.build]
-build = "build"
