--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ spacy-transformers = "^1.3.3"
 sacremoses = "^0.1.1"
 memory-profiler = "^0.61.0"
 spacy = "^3.7.2"
+numpy = "^1.26.0"
 
 
 [build-system]
